--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   "require": {
     "php": ">=5.6.0",
     "guzzlehttp/guzzle": "~6.0",
+    "illuminate/support": "~5.0",
     "league/event": "^2.1"
   },
   "require-dev": {
